* Add Github login * Wrap GRACE layers around Meridian. * Add some placeholders to CPU/RAM values in job wizard. * Add a message in user profile informing user credentials must be added to run jobs. * Fix graph titles.

--- a/src/app/layout/user/user-management.component.scss
+++ b/src/app/layout/user/user-management.component.scss
@@ -17,3 +17,7 @@ input.ng-invalid.ng-touched {
 	position: relative;
 	z-index: -1;
 }
+
+.job-notice {
+	font-size: larger;
+}
